Added utils.js file. Made game object movement smooth.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         </div>
 
         <!-- Scripts-->
+        <script src="./utils.js"></script>
         <script src="./Sprite.js"></script>
         <script src="./GameObject.js"></script>
         <script src="./OverworldMap.js"></script>
